# qgis

python/: CMakeLists.txt
python/plugins/: CMakeLists.txt
python/plugins/basicmodule/: __init__.py  basicmodule.py
python/plugins/gdalalgorithms/: __init__.py  gdalalgorithms.py
python/plugins/inputparameters/: CMakeLists.txt  inputparameters.py
python/plugins/processingmanager/: CMakeLists.txt  __init__.py  aboutdialog.ui  core.py  dialog.py  dialog.ui  gui.py  panel.py  panel.ui  processing.qrc  savedialog.ui  workflowBuilder.py  workflowBuilder.ui
python/plugins/processingplugin/: CMakeLists.txt  __init__.py  aboutdialog.py  aboutdialog.ui  dialog.py  dialog.ui  panel.py  settings.ui  ui.py
python/plugins/saga/: __init__.py  plugin.py
python/plugins/workflow_builder/: CMakeLists.txt  workflow_builder.py
python/processing/: __init__.py  apidoc.py  checkmodulesupport.py  markdowndoc.py  moduleinstance.py  parameters.py
